css/rs.css
.page-header-text {
    margin-top: 10px;
    margin-bottom: 20px;
}

.footer {
    color: #777;
    border-top: 1px solid #e5e5e5;
}

.rating-stars,
.rating-stars-noclick {
    unicode-bidi: bidi-override;
    direction: rtl;
    font-size: 150%;
}
.rating-stars > span,
.rating-stars-noclick {
    display: inline-block;
    position: relative;
    color: orange;
}
.rating-stars > span:hover:before,
.rating-stars > span:hover ~ span:before {
    content: "\2605";
    position: absolute;
    color: #0094ff;
}
.rating-stars > score {
    font-weight: bold;
    color: orange;
}
.rating-stars > score > of-possible  {
    font-size: 75%;
    font-weight: lighter;
    color: grey;
}
.rating-star {
    font-size: 125%;
}

.rating-date {
    display:inline-block;
    min-height: 17px;
}

.rating-background {
    background-image: url("/image/gold_circle.png");
}

.film-line {
    font-size: 125%;
}
.film-line > .film-title {
    font-size: 115%;
    font-weight: bold;
}
.film-line > .film-title > a {
    color: black;
}

.tv-episode-title {
    font-size: 105%;
    font-weight: bold;
}
.tv-season, 
.tv-episodenum {
}

poster {
    margin: 4px;
    border-radius: 3px;
    min-width: 150px;
    display: inline-flex;
}

poster > a {
    margin: auto;
}

poster > img,
poster > a > img {
    width: 150px;
    max-height: 221px;
    object-fit: cover;
    object-position: center;
    border-radius: .3rem;
}

.img-episode {
    border-radius: 25%;
}

episodeListPoster {
    float: left;
    padding: 2px;
}

episodeListPoster > img {
    min-height: 52px;
}

detail-episodeNumber {
    float: left;
    font-size: 2em;
    height: 100%;
    margin-left: 5px;
    margin-right: 5px;
    vertical-align: middle;
}

.thirdparty-bar {
    position: relative;
    text-align: left;
}

.thirdparty-bar > .source-logo-1,
.thirdparty-bar > .source-logo-2 {
    display: inline-block;
}

.thirdparty-bar > .source-logo-1 > a > imdbScore,
.thirdparty-bar > .source-logo-1 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 12px;
    color: black;
}

.thirdparty-bar > .source-logo-2 > a > imdbScore,
.thirdparty-bar > .source-logo-2 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 85px;
    color: black;
}

.thirdparty-bar > a:link {
    text-decoration: none;
}

.checkmark-off {
    color: grey;    
}

.checkmark-on {
    color: #10b33c;    
}

.film-filmlists {
    float: left;
    padding-right: 15px;
}

.streams {
    float: left;
    padding-left: 5px;
    padding-right: 10px;
}

.stream {
    float: left;
    padding-right: 10px;
    padding-bottom: 10px;
}

.stream-icon {
    background-image: url("Icons.png");
    background-color: transparent;
    border-radius: 4px;
    height: 33px;
    width: 35px;
}

.icon-Netflix { background-position: -580px -53px; }
.icon-Amazon { background-position: -445px -10px; }
.icon-xfinity { background-position: -490px -182px; }
.icon-Hulu { background-position: -445px -96px; }
.icon-YouTube { background-position: -625px -10px; }
.icon-HBO { background-position: -625px -96px; }

.rating-detail {
    position: fixed;
    margin-right:auto;
    margin-left:auto;
    border-radius: 5px;
    top: 30%;
    width: 90%;
    left: 5%;
    z-index: 1;
    background-color: rgba(255, 255, 255, 0.85);
    box-shadow: 10px 10px 5px grey;
}

.userlist-film {
    min-height: 231px;
    width: 160px;
    background-color: #f9f9f9;
    border-style: outset;
    border-width: thin;
    border-radius: 3%;
    margin-bottom: 5px;
}

.userlist-film-episode {
    min-height: auto;
    border-radius: 25%;
}

.film-dropdown-content {
    display: none;
    position: absolute;
    top: 0;
    z-index: 1;
    width: 325px;
    min-height: 231px;
    background-color: rgba(249, 249, 249, 0.95);
    border-style: outset;
    border-width: thin;
    margin-bottom: 5px;
    padding-bottom: 3px;
    padding-left: 5px;
}

.detail-right {
    left: 170px;
    border-left-style: none;
    border-right-style: outset;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-top-right-radius: 3%;
    border-bottom-right-radius: 3%;
}

.detail-left {
    left: -305px;
    border-left-style: outset;
    border-right-style: none;
    border-top-left-radius: 3%;
    border-bottom-left-radius: 3%;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.search-status {
    font-weight: bold;
}

.filmlist-checkbox-inline > label {
    margin-bottom: 0px;
    margin-top: 5px;
}

/* The container <div> - needed to position the dropdown content */
.rs-dropdown-checklist {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.rs-dropdown-checklist-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    top: 38px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.rs-dropdown-checklist-content a {
    color: black;
    text-decoration: none;
    display: block;
    white-space: nowrap;
    padding: 3px 20px 3px 20px;
}

/* Change color of dropdown links on hover */
.rs-dropdown-checklist-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.rs-dropdown-checklist:hover .rs-dropdown-checklist-content {
    display: block;
}

/* Any line inside the dropdown other than <a> */
.rs-dropdown-checklist-content checklist-line {
    white-space: nowrap;
    padding-left: 20px;
    padding-right: 20px;
}

checklist-line input[type="radio"] {
    margin-right: 3px;
}

#header-search-suggestion {
    position: absolute;
    top: 38px;
    width: 100%;
    padding: 1px 5px 1px 5px;
    border: 1px;
    border-style: solid;
    border-top: none;
    border-radius: 4px 4px 10px 10px;
    border-color: #ccc;
    z-index: 10;
    background-color: white;
}

#header-search-suggestion a {
    text-decoration: none;
    color: #495057;
}

#header-search-suggestion a.suggestion-selected > div {
	background-color: #f1f1f1;
}

.search-suggestion-item {
    border-top: 1px solid #ccc;
    padding-top: .15rem;
    min-height: 64px;
    margin: 0px;
}

.suggestion-poster {
    width: 40px;
    height: auto;
    border: 1px solid #dee2e6;
}

.suggestion-rating {
    color: orange;
    line-height: 1.1;
}

.suggestion-rating > .rating-star {
    font-size: inherit;
}

.search-suggestion-label {
    text-align: center;
}

.rs-filmlist-sort {
    text-align: right;
    width: 100%;
}

.rs-filmlist-sort img {
    height: 25px;
}

.rs-navbar {
    border-radius: 4px;
	border: 1px solid #e7e7e7;
}

detail-film {
}

detail-episode {
    margin-bottom: 7px;
    border: 1px solid #e3e3e3;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    color: #777;
}

detail-episode > a,
detail-episode > a:any-link {
    text-decoration: none;
    color: inherit;
}

detail-episode-rating {
    padding-left: 5px;
    color: orange;
}

.btn-primary {
	background-color: #337ab7;
	border-color: #2e6da4;
}

/* Small */
@media (min-width:576px) {
    .rating-detail {
        width: 80%;
        left: 10%;
    }
}

/* Medium */
@media (min-width:768px) {
    .rating-detail {
        width: 70%;
        left: 15%;
    }

    .footer {
        padding-right: 0;
        padding-left: 0;
    }
}

/* Large */
@media (min-width:992px) {
    .rating-detail {
        width: 60%;
        left: 20%;
    }
}

/* X-Large */
@media (min-width:1200px) {
    .rating-detail {
        width: 46%;
        left: 27%;
    }
}

